--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "unplugin-vue-define-options": "^1.3.3",
     "vite": "^4.3.0-beta.2",
     "vite-plugin-mock": "^2.9.6",
+    "@kirklin/vite-plugin-vben-theme": "0.1.1",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^1.2.0"
   },
